chore: add publisher name

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "type": "git",
         "url": "https://github.com/alii13/svg-mana.git"
     },
+    "publisher": "Alii",
     "categories": [
         "Other"
     ],
