--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "svg-mana",
-    "displayName": "svg-mana",
-    "description": "",
+    "displayName": "SVG Mana",
+    "description": "A VS Code extension that replaces SVG colors with currentColor.",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.95.0"
@@ -23,6 +23,9 @@
     "categories": [
         "Other"
     ],
+    "extensionKind": [
+        "workspace"
+    ],
     "activationEvents": [
         "onLanguage:xml",
         "onLanguage:svg"
@@ -32,7 +35,7 @@
         "commands": [
             {
                 "command": "svgCurrentColor.replaceColors",
-                "title": "Transform using svg mana"
+                "title": "Transform using SVG Mana"
             }
         ],
         "menus": {
@@ -45,6 +48,7 @@
             ]
         }
     },
+    "license": "MIT",
     "scripts": {
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
